--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "apollo-server": "^2.8.1",
+    "bcryptjs": "^2.4.3",
+    "graphql": "^14.4.2",
     "sequelize": "^5.15.0",
     "sequelize-cli": "^5.5.0",
     "sqlite3": "^4.0.9"
